Update vercel config for Nuxt deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "builds": [
-    {
-      "src": "nuxt.config.ts",
-      "use": "@nuxtjs/vercel-builder"
-    }
-  ]
+  "framework": "nuxtjs"
 }
