Fix white screen: Add Sanity env vars and SSR prerendering
- Add Sanity environment variables to GitHub Actions workflow
- Enable SSR and prerendering for static content generation
- Configure crawlLinks to ensure all pages are prerendered
- Use process.env fallbacks for runtime config

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,7 +25,12 @@ jobs:
           cache: 'npm'
       - run: npm ci
       # Build with correct base for repo pages and Nuxt's GitHub Pages preset
-      - run: NUXT_APP_BASE_URL=/ESTE/ npx nuxt build --preset github_pages
+      - run: npm run build
+        env:
+          NUXT_APP_BASE_URL: /ESTE/
+          NUXT_PUBLIC_SANITY_PROJECT_ID: 928u0duj
+          NUXT_PUBLIC_SANITY_DATASET: production
+          NUXT_PUBLIC_SANITY_API_VERSION: 2023-05-03
       # Prevent Jekyll from blocking the _nuxt folder
       - run: touch .output/public/.nojekyll
       - uses: actions/upload-pages-artifact@v3
